connect-op.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyexec
spec:
  crd:
    spec:
      names:
        kind: k8sdenyexec
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyexec
        import future.keywords.every
        violation[{"msg": msg}] {
          input.review.object.stdin == true
          msg :=  "Interactive exec is not permitted."
        }
        allowed_commands := {"ls","cat"}
        violation[{"msg": msg}] {
          some command in input.review.object.command
            not command in allowed_commands
          msg := sprintf("Only %v commands are allowed.", [allowed_commands])
        }
