pspconstraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPRestrictions
metadata:
  name: pod-security-policy
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["policy"]
        kinds: ["PodSecurityPolicy"]
